--- a/barcelona.yml
+++ b/barcelona.yml
@@ -9,7 +9,7 @@ environments:
         public: true
         cpu: 256
         memory: 256
-        command: rails s -p 3000 -b 0.0.0.0
+        command: puma -C config/puma.rb
         port_mappings:
           - lb_port: 80
             container_port: 3000
