--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_script:
 - psql -c 'create database travis_ci_test;' -U postgres
 - cp config/database.travis.yml config/database.yml
 script:
-- bundle exec rake spec
+- bundle exec rake db:setup spec
 after_success:
 - bin/deploy_barcelona
 notifications:
