--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,4 +1,5 @@
 AllCops:
+  TargetRubyVersion: 2.3
   Exclude:
     - "vendor/**/*"
     - "db/schema.rb"
@@ -92,7 +93,7 @@ Style/SignalException:
   EnforcedStyle: only_raise
 
 Style/SpaceAroundOperators:
-  MultiSpaceAllowedForOperators:
+  AllowForAlignment:
     - "="
     - "=>"
     - "||"
