Use degica/rails-base

--- a/Dockerfile.development
+++ b/Dockerfile.development
@@ -1,13 +1,3 @@
-FROM ruby:2.3
+FROM degica/rails-base:debian
 
-RUN apt-get update && apt-get install -y postgresql-client nodejs --no-install-recommends && rm -rf /var/lib/apt/lists/*
-
-ARG APP_HOME
-
-RUN mkdir -p $APP_HOME
-WORKDIR $APP_HOME
-
-ADD Gemfile $APP_HOME/
-ADD Gemfile.lock $APP_HOME/
-
-RUN bundle install
+ADD . $APP_HOME
