--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 version: '2'
 services:
   web: &app_base
+    depends_on:
+      - db
     build:
       context: .
       dockerfile: Dockerfile.development
@@ -38,6 +40,11 @@ services:
       - spring:/tmp/spring
   db:
     image: postgres:9.5
+    environment:
+      PGDATA: /data
+    volumes:
+      - pgdata:/data
 volumes:
+  pgdata:
   bundle:
   spring:
