--- a/examples/rails-app/barcelona.yml
+++ b/examples/rails-app/barcelona.yml
@@ -2,6 +2,11 @@ environments:
   production:
     name: rails-app
     image_name: k2nr/rails-docker-sample
+    scheduled_tasks:
+      - schedule: rate(1 minute)
+        command: ["sh", "-c", "echo hello $SECRET_KEY_BASE"]
+      - schedule: rate(10 minutes)
+        command: echo hello hello
     services:
       - name: web
         service_type: web
