--- a/Dockerfile.development
+++ b/Dockerfile.development
@@ -1,4 +1,5 @@
 FROM degica/rails-base:debian
 
 RUN apt-get install -y openssh-client --no-install-recommends
-ADD . $APP_HOME
+RUN chown -R app:app $APP_HOME
+USER app
