--- a/Dockerfile.development
+++ b/Dockerfile.development
@@ -1,4 +1,4 @@
-FROM degica/rails-base:debian
+FROM degica/rails-base:2.3
 
 RUN apt-get install -y openssh-client --no-install-recommends
 RUN chown -R app:app $APP_HOME
