--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
     tty: true
     links:
      - db
+     - vault
     volumes:
       - bundle:/usr/local/bundle
       - .:${PWD}
@@ -27,6 +28,8 @@ services:
       GITHUB_ORGANIZATION: 'degica'
       GITHUB_DEVELOPER_TEAM: 'developers'
       GITHUB_ADMIN_TEAM: 'Admin developers'
+      VAULT_URL: http://vault:8200
+      VAULT_PATH_PREFIX: degica
   worker:
     <<: *app_base
     ports: []
@@ -47,6 +50,13 @@ services:
       test: echo "\\l" | psql -U postgres
     volumes:
       - pgdata:/data
+  vault:
+    image: vault:0.7.2
+    ports:
+      - "8200:8200"
+    environment:
+      SKIP_SETCAP: "true"
+      VAULT_DEV_ROOT_TOKEN_ID: root-token
 volumes:
   pgdata:
   bundle:
