Update ruby version and Dockerfiles

--- a/Dockerfile.development
+++ b/Dockerfile.development
@@ -1,5 +1,12 @@
-FROM degica/rails-base:2.5
+FROM degica/rails-buildpack:2.6
 
+ARG UID=1000
+ARG APP_HOME=/app
+
+WORKDIR $APP_HOME
+
+RUN useradd --uid $UID --user-group --create-home app
+RUN mkdir -p $APP_HOME && chown -R app:app $APP_HOME
 RUN apt-get install -y openssh-client --no-install-recommends
-RUN chown -R app:app $APP_HOME
+
 USER app
