Update development docker files

--- a/Dockerfile.development
+++ b/Dockerfile.development
@@ -1,12 +1,14 @@
 FROM degica/rails-buildpack:2.6
 
 ARG UID=1000
-ARG APP_HOME=/app
-
-WORKDIR $APP_HOME
+ARG APP_HOME
 
 RUN useradd --uid $UID --user-group --create-home app
 RUN mkdir -p $APP_HOME && chown -R app:app $APP_HOME
 RUN apt-get install -y openssh-client --no-install-recommends
+
+WORKDIR /app
+RUN rm -rf $APP_HOME && ln -s /app $APP_HOME
+ENV PATH=/app/bin:$PATH
 
 USER app
