Do db:migrate on deploy

--- a/barcelona.yml
+++ b/barcelona.yml
@@ -2,6 +2,7 @@ environments:
   production:
     name: barcelona2
     image_name: quay.io/degica/barcelona
+    before_deploy: rake db:migrate
     scheduled_tasks:
       # 10AM JST every week day
       - schedule: cron(0 1 ? * MON-FRI *)
