--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
         QUAY_REPOSITORY: degica/barcelona
         QUAY_TOKEN: ${{ secrets.QUAY_TOKEN }}
       run: |-
-        curl -sL https://deb.nodesource.com/setup_12.x | sudo -E bash -
+        curl -sL https://deb.nodesource.com/setup_12.x | bash -
         apt-get update
         apt-get install -y nodejs
         npm install -g barcelona
