--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,9 +21,11 @@ jobs:
     - name: deploy
       if: ${{ github.ref == 'refs/heads/master' }}
       env:
-        TRAVIS: 'true'               # Trick bcnd to think we are on travis
-        TRAVIS_BRANCH: master        # until we add github actions support
-        TRAVIS_PULL_REQUEST: 'false' # and tell it this is not a PR
+        TRAVIS: 'true'                     # Trick bcnd to think we are on travis
+        TRAVIS_BRANCH: master              # until we add github actions support
+        TRAVIS_PULL_REQUEST: 'false'       # and tell it this is not a PR
+        TRAVIS_REPO_SLUG: degica/barcelona # and let it know the repo
+        TRAVIS_COMMIT: $GITHUB_SHA
         BARCELONA_ENDPOINT: https://barcelona.degica.com
         MAINLINE_HERITAGE_TOKEN: ${{ secrets.MAINLINE_HERITAGE_TOKEN }}
         QUAY_REPOSITORY: degica/barcelona
