build all the time

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,5 +35,8 @@ jobs:
       run: bcn deploy -q -e production --tag $GITHUB_SHA --heritage-token ${{ secrets.MAINLINE_HERITAGE_TOKEN }}
 'on':
   push:
-    branches-ignore:
+    branches:
+    - master
+  pull_request:
+    branches:
     - master
