--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,13 +26,13 @@ jobs:
         docker push $DOCKER_REPOSITORY:$GITHUB_SHA
         echo ${{ github.ref }}
     - name: deploy_setup
-      if: github.ref == 'refs/head/master'
+      if: github.ref == 'refs/heads/master'
       run: |-
         curl -L -o bcn.zip https://github.com/degica/barcelona-cli/releases/latest/download/bcn_linux_amd64.zip
         unzip ./bcn.zip && mv ./bcn /usr/bin/bcn
 
     - name: deploy_script
-      if: github.ref == 'refs/head/master'
+      if: github.ref == 'refs/heads/master'
       run: bcn deploy -q -e production --tag $GITHUB_SHA --heritage-token ${{ secrets.MAINLINE_HERITAGE_TOKEN }}
 'on':
   push:
