Fix dev docker image does not work

--- a/Dockerfile.development
+++ b/Dockerfile.development
@@ -5,10 +5,13 @@ ARG APP_HOME
 
 RUN useradd --uid $UID --user-group --create-home app
 RUN mkdir -p $APP_HOME && chown -R app:app $APP_HOME
+RUN ln -s -f /app $APP_HOME
+
 RUN apt-get install -y openssh-client --no-install-recommends
 
 WORKDIR /app
 RUN rm -rf $APP_HOME && ln -s /app $APP_HOME
 ENV PATH=/app/bin:$PATH
+ENV HOME=/home/app
 
 USER app
