Fix spec file pattern

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -53,7 +53,7 @@
             "program": "${workspaceRoot}/bin/rspec",
             "args": [
                 "--pattern",
-                "${workspaceRoot}/spec/**/*_rspec.rb"
+                "${workspaceRoot}/spec/**/*_spec.rb"
             ]
         },
         {
