Fix docker compose config
The existing config was not correctly forwarding requests to the web
server. Since the web server is intentionally meant to be very basic, it
doesn't have SSL support so the nginx server should not to try to force
SSL on incoming requests, otherwise they will fail.

Also removing the port binding for the web server itself as it doesn't
need to be accessible from the host directly.

--- a/dockerfiles/reverse-proxy/docker-compose.test.yml
+++ b/dockerfiles/reverse-proxy/docker-compose.test.yml
@@ -8,9 +8,9 @@ services:
             - web
         environment:
             UPSTREAM_NAME: web
-            UPSTREAM_PORT: 50133
+            UPSTREAM_PORT: 80
+            FORCE_SSL: "false"
+            DISABLE_PROXY_PROTOCOL: "true"
     web:
         image: yeasy/simple-web
-        ports: 
-            - "50133:80"
 
