Fix according to the reviews

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -148,6 +148,12 @@ Style/RedundantRegexpEscape:
 Style/SlicingWithRange:
   Enabled: true
 
+Style/SymbolArray:
+  Enabled: false
+
+Style/WordArray:
+  Enabled: false
+
 Lint/StructNewOverride:
   Enabled: true
 
