--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,25 +5,34 @@ jobs:
       image: docker:git
       env:
         BARCELONA_ENDPOINT: https://barcelona.degica.com
-        DOCKER_REPOSITORY: quay.io/degica/barcelona
+        DOCKER_REPOSITORY: public.ecr.aws/degica/barcelona
         DOCKER_BUILDKIT: '1'
-        QUAY_USERNAME: degica+github_actions
     runs-on: ubuntu-18.04
     steps:
+    - name: prepare
+      run: |-
+        apk add --no-cache python3 py3-pip
+        pip3 install --upgrade pip
+        pip3 install awscli
     - uses: actions/checkout@v2
     - name: setup
       run: git submodule update --init
     - name: script
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       run: |-
-        docker build . -t $DOCKER_REPOSITORY:$GITHUB_HEAD_REF --pull || true
-        docker build . -t $DOCKER_REPOSITORY:$GITHUB_SHA --pull
-        echo ${{ github.ref }}
-    - name: push_images
-      if: github.ref == 'refs/heads/master'
-      run: |-
-        docker login -u "$QUAY_USERNAME" -p "${{ secrets.QUAY_TOKEN }}" quay.io
-        docker push $DOCKER_REPOSITORY:$GITHUB_HEAD_REF || true
-        docker push $DOCKER_REPOSITORY:$GITHUB_SHA
+        if [[ ${GITHUB_REF##*/} == 'master' ]]; then
+            IMAGE_TAG=$GITHUB_SHA # git SHA for staging/production deployments
+        else
+            IMAGE_TAG=${GITHUB_REF##*/} # branch name for dev usecases
+        fi
+
+        aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/degica
+
+        docker build . -t $DOCKER_REPOSITORY:$IMAGE_TAG --build-arg git_revision=$IMAGE_TAG --pull
+        docker images
+        docker push $DOCKER_REPOSITORY:$IMAGE_TAG
 
   deploy:
     container:
@@ -45,8 +54,4 @@ jobs:
       run: bcn deploy -q -e production --tag $GITHUB_SHA --heritage-token ${{ secrets.MAINLINE_HERITAGE_TOKEN }}
 'on':
   push:
-    branches:
-    - master
-  pull_request:
-    branches:
-    - master
+    branches: '*'
