--- a/.github/workflows/build-reverse-proxy.yml
+++ b/.github/workflows/build-reverse-proxy.yml
@@ -1,5 +1,15 @@
 name: build-reverse-proxy
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+    - name: startup
+      run: |
+        docker-compose -f docker-compose.test.yml up --build -d
+    - name: test
+      run: |
+        curl http://localhost:50132
+
   build:
     container:
       image: docker:git
