--- a/dockerfiles/run-pack/Makefile
+++ b/dockerfiles/run-pack/Makefile
@@ -1,4 +1,4 @@
 build:
 	docker build -t public.ecr.aws/degica/barcelona-run-pack .
 build-dev:
-	docker build -t run-pack-dev -f Dockerfile.dev .
+	docker build -t run-pack-dev .
