disable document installation

--- a/dockerfiles/reverse-proxy/Dockerfile
+++ b/dockerfiles/reverse-proxy/Dockerfile
@@ -3,7 +3,7 @@ FROM nginx:stable
 RUN apt-get update && \
     apt-get install -q -y ruby && \
     rm -rf /var/lib/apt/lists/* && \
-    gem install aws-sdk && \
+    gem install aws-sdk --no-document && \
     mkdir -p /etc/nginx/certs
 
 ADD templates /templates
