--- a/.github/workflows/build-reverse-proxy.yml
+++ b/.github/workflows/build-reverse-proxy.yml
@@ -25,6 +25,8 @@ jobs:
         AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
     runs-on: ubuntu-18.04
     steps:
+    - name: workaround
+      run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
     - name: prepare
       run: |-
         apk add --no-cache python3 py3-pip
