--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       context: .
       dockerfile: Dockerfile.development
       args:
-        - UID=${UID-1000}
+        - DOCKER_UID=${DOCKER_UID-1000}
         - APP_HOME=${PWD}
     ports:
      - "3333:3333"
