Allow to create initial login without prompt for ssh key, update support files for e2e

--- a/Dockerfile.development
+++ b/Dockerfile.development
@@ -1,17 +1,43 @@
-FROM public.ecr.aws/degica/rails-buildpack:2.7.7
+FROM public.ecr.aws/degica/rails-buildpack:2.7.7 as builder
 
-ARG DOCKER_UID=1000
-ARG APP_HOME
+ENV APP_HOME=/app
+WORKDIR $APP_HOME
 
-RUN useradd --uid $DOCKER_UID --user-group --create-home app
-RUN mkdir -p $APP_HOME && chown -R app:app $APP_HOME
-RUN ln -s -f /app $APP_HOME
+COPY Gemfile $APP_HOME/
+COPY Gemfile.lock $APP_HOME/
 
-RUN apt-get install -y openssh-client --no-install-recommends
+RUN bundle config set without 'development test' && \
+    MAKE="make -j $(nproc)" bundle install -j $(nproc)
 
-WORKDIR /app
-RUN rm -rf $APP_HOME && ln -s /app $APP_HOME
-ENV PATH=/app/bin:$PATH
-ENV HOME=/home/app
+FROM --platform=linux/amd64 ruby:2.7.7
+
+ENV APP_HOME=/app
+ENV PATH=$APP_HOME/bin:$PATH
+WORKDIR $APP_HOME
+
+RUN useradd --user-group --create-home app
+
+RUN apt-get update \
+ && apt-get install -y --no-install-recommends \
+      file \
+      git \
+      curl \
+      libpq5 \
+      libsqlite3-0 \
+      libxslt1.1 \
+      libxml2 \
+      libcurl3-gnutls \
+      openssh-client \
+ && rm -rf /var/lib/apt/lists/* \
+ && mkdir $APP_HOME/tmp \
+ && mkdir $APP_HOME/log \
+ && chown -R app $APP_HOME
+
+COPY --from=builder --chown=app:app /usr/local/bundle /usr/local/bundle
+ADD --chown=app:app . $APP_HOME
 
 USER app
+
+EXPOSE 3000
+
+CMD ["rails", "server", "-b", "0.0.0.0"]
