--- a/Dockerfile.development
+++ b/Dockerfile.development
@@ -1,15 +1,4 @@
-FROM public.ecr.aws/degica/rails-buildpack:2.7.7 as builder
-
-ENV APP_HOME=/app
-WORKDIR $APP_HOME
-
-COPY Gemfile $APP_HOME/
-COPY Gemfile.lock $APP_HOME/
-
-RUN bundle config set without 'development test' && \
-    MAKE="make -j $(nproc)" bundle install -j $(nproc)
-
-FROM --platform=linux/amd64 ruby:2.7.7
+FROM public.ecr.aws/docker/library/ruby:2.7.8
 
 ENV APP_HOME=/app
 ENV PATH=$APP_HOME/bin:$PATH
@@ -33,8 +22,12 @@ RUN apt-get update \
  && mkdir $APP_HOME/log \
  && chown -R app $APP_HOME
 
-COPY --from=builder --chown=app:app /usr/local/bundle /usr/local/bundle
-ADD --chown=app:app . $APP_HOME
+COPY Gemfile $APP_HOME/
+COPY Gemfile.lock $APP_HOME/
+
+RUN MAKE="make -j $(nproc)" bundle install -j $(nproc)
+
+RUN chown -R app:app /usr/local/bundle
 
 USER app
 
